--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
 <!-- Write your HTML in this file -->
+<!DOCTYPE html>
+
+<html>
+  <head>
+    <title>Jeff's Webpage</title>
+  </head>
+  <body></body>
+</html>
